[workspace]
resolver = "2"
members = [
    "gssproxy-proto",
    "gssapi-sys",
    "gssproxy-client",
    "gssproxy-server",
    "gssproxy-interposer",
]
# gssproxy-bench links the C rpcgen XDR (gssrpc) and reads ../../rpcgen, so it is
# kept out of the workspace: the hermetic `--workspace` gates (clippy, rust-tests,
# kani) must not try to build it. Run it via `nix develop .#bench`.
exclude = [
    "gssproxy-bench",
]

[workspace.package]
version = "0.9.2"
edition = "2024"
# Matches the root project license (see ../COPYING).
license = "MIT"
repository = "https://github.com/gssapi/gssproxy"
# Edition 2024 needs rustc >= 1.85; pinned to the flake's toolchain (1.95) since
# that is the only version the CI gates build and test against.
rust-version = "1.95"

# Intra-workspace deps carry an explicit version (not just a path) so they are
# not treated as wildcard ("*") dependencies by cargo-deny's `bans` check.
[workspace.dependencies]
gssproxy-proto = { path = "gssproxy-proto", version = "0.9.2" }
gssapi-sys = { path = "gssapi-sys", version = "0.9.2" }
gssproxy-client = { path = "gssproxy-client", version = "0.9.2" }
libc = "0.2"
# Structured logging. `tracing` provides the (near-zero-cost when disabled)
# span/event macros used throughout the crates; `tracing-subscriber` (with
# `env-filter`) is only pulled in by the components that actually install a
# subscriber (the daemon, and the interposer when GSSPROXY_LOG is set).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# `kani` is a custom cfg injected by `cargo kani` (--cfg kani). Declare it so the
# `unexpected_cfgs` lint (denied via clippy -D warnings) doesn't fire on the
# `#[cfg(kani)]` verification modules during normal builds. Crates that use it
# opt in with `[lints] workspace = true`.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
