[package]
name = "gssapi-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe-ish FFI bindings to the system GSSAPI/krb5 needed by gssproxy"

[dependencies]
libc.workspace = true
# Raw, bindgen-generated bindings to the system GSSAPI (MIT krb5). We add only
# the gssproxy-specific OID constants, computed GSS_S_*/GSS_C_* values (bindgen
# drops computed macros), and safe RAII wrappers on top.
libgssapi-sys = "0.3"

[build-dependencies]
# libgssapi-sys binds only the gssapi headers; the credential sealing layer
# (gp_export.c) needs the krb5 crypto/keytab API, so we generate our own krb5
# bindings here and link libkrb5. 0.71 for `rust_edition` (emits the edition-2024
# `unsafe extern "C"` blocks); matches the bindgen libgssapi-sys pulls in.
bindgen = "0.71.1"
pkg-config = "0.3"
