[package]
name = "gssproxy-bench"
version = "0.9.2"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/gssapi/gssproxy"
description = "Criterion benchmarks comparing the Rust gssx codec against the C rpcgen XDR"
publish = false

[dependencies]
gssproxy-proto = { path = "../gssproxy-proto" }

[dev-dependencies]
criterion = "0.8"
# pprof's own "criterion" integration is pinned to criterion 0.5, so we drive
# pprof directly via a small custom Profiler (see benches/codec.rs) and only
# need the flamegraph output here.
pprof = { version = "0.15", features = ["flamegraph"] }

[build-dependencies]
cc = "1"
pkg-config = "0.3"

[[bench]]
name = "codec"
harness = false

# Keep debuginfo in the bench binary so cargo-flamegraph / perf can resolve
# symbols (and pprof can unwind) without a separate CARGO_PROFILE_BENCH_DEBUG.
[profile.bench]
debug = true
